[project]
name = "cybermod"
version = "5.5.1"
description = "A monkeypatcher add-on for cybergram that does conversation handling"
authors = [
    { name = "rizaldevs", email = "rizaldaitona@gmail.com" }
]
dependencies = [
    "cybergram >= 1.0"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pdoc>=14.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true
